--- a/src/style/main.css
+++ b/src/style/main.css
@@ -101,6 +101,8 @@ table {
 }
 .line_input_wrapper {
     display: flex;
+    border: 1px solid #DDD;
+    margin-top: 5px;
 }
 
 .weather_city_card {
